...
    <string name="password">Password</string>
    <string name="sign_up_button">Sign Up!</string>
    <string name="verify">Verify</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify_button">Verify!</string>
    <string name="login">Login</string>
    <string name="login_button">Login!</string>
    <string name="move_to_sign_up_page">Move to sign up page!</string>
    <string name="view_all_cards">View All Cards</string>
    <string name="viewing_all_cards">All Cards</string>
    <string name="image_value">Image of Tarot Card</string>
    <string name="tarot_name">Tarot Name</string>
    <string name="view_my_reading">View My Reading</string>
    <string name="draw_cards">Draw Cards</string>
    <!--    <string name="drawer_open">Open navigation drawer</string>-->
    <!--    <string name="drawer_close">Close navigation drawer</string>-->
    <string name="open_settings">Open settings</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="watch_ad">Get Another Reading</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="reading">Reading</string>
    <string name="about">About Us</string>
    <string name="library">Library</string>
    <string name="header">Header</string>
    <string name="past_readings">Past Readings</string>
    <string name="draw_cards_interpretation">Draw Cards To Get a Card Interpretation</string>
    <string name="deck">Deck of Cards</string>
    <string name="drawn_card_one">First Drawn Card</string>
    <string name="second_drawn_card">Second Drawn Card</string>
    <string name="third_drawn_card">Third Drawn Card</string>
    <string name="card_up">Up Description</string>
    <string name="card_rev">Reverse Description</string>
    <string name="description">Card Description</string>
    <string name="select_card_style">Select Card Style</string>
    <string name="gold">Gold Theme</string>
    <string name="light">Light Theme</string>
...
