<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ReadingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/DailyReadingConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/night_sky_gradient"
        tools:context=".activities.ReadingActivity"
        tools:ignore="ExtraText">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_70"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/ReadingActivityDrawCardsButton"
            style="@style/MyButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/draw_cards"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/horizontal_guideline_70"
            tools:ignore="VisualLintOverlap" />

        <Button
            android:id="@+id/ReadingActivityRewardAdButton"
            style="@style/MyButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/watch_ad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/horizontal_guideline_70" />

        <ImageView
            android:id="@+id/ReadingActivityDeckImage"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:layout_marginVertical="16dp"
            android:contentDescription="@string/deck"
            android:src="@drawable/cover"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline_70"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/horizontal_guideline_40" />

        <ImageView
            android:id="@+id/ReadingActivityDrawnCardOne"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/drawn_card_one"
            android:src="@drawable/cover"
            app:layout_constraintBottom_toTopOf="@id/horizontal_guideline_30"
            app:layout_constraintEnd_toStartOf="@id/ReadingActivityDrawnCardTwo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="VisualLintBounds" />

        <ImageView
            android:id="@+id/ReadingActivityDrawnCardTwo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/second_drawn_card"
            android:src="@drawable/cover"
            app:layout_constraintBottom_toTopOf="@id/horizontal_guideline_30"
            app:layout_constraintEnd_toStartOf="@id/ReadingActivityDrawnCardThree"
            app:layout_constraintStart_toEndOf="@id/ReadingActivityDrawnCardOne"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ReadingActivityDrawnCardThree"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/third_drawn_card"
            android:src="@drawable/cover"
            app:layout_constraintStart_toEndOf="@id/ReadingActivityDrawnCardTwo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/horizontal_guideline_30" />

        <TextView
            android:id="@+id/CustomSpreadTapHold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/libre_caslon_header"
            android:text="@string/tap_hold"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/DailyCardActivityViewCardDetailsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/horizontal_guideline_30" />

        <Button
            android:id="@+id/DailyCardActivityViewCardDetailsButton"
            style="@style/MyButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/view_interpretation"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline_40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/meta_banner_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/MainActivityNavigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu"
        tools:ignore="VisualLintBounds" />

</androidx.drawerlayout.widget.DrawerLayout>